<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llDrEdit"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/sysbg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/edit_bar"
        style="@style/BottomButtonBar"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            style="@style/LeftBottomButton"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/btnSave"
            style="@style/RightBottomButton"
            android:text="@string/button_save" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvHdName"
        style="@style/ButtonTitle"
        android:layout_alignParentTop="true"
        android:text="" >
    </TextView>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/edit_bar"
        android:layout_below="@+id/tvHdName"
        android:fillViewport="true" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llContent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvHdDesp"
                style="@style/TextViewCont1"
                android:text="" >
            </TextView>

            <Button
                android:id="@+id/btnNextDate"
                style="@style/TextViewCont2RightAllow"
                android:text="@string/txt_NextDate" >
            </Button>

            <CheckBox
                android:id="@+id/cbIsAppWidget"
                style="@style/CheckBoxGroup"
                android:text="@string/txt_IsAppWidget" >
            </CheckBox>

            <Button
                android:id="@+id/btnApDays"
                style="@style/TextViewCont2DownAllow"
                android:text="@string/txt_AfDays" >
            </Button>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/llRemindType"
                style="@style/TextViewGroup"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvRemindType"
                    android:layout_width="96dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="left|center_vertical"
                    android:text="@string/txt_RemindType"
                    android:textColor="#ff000000"
                    android:textSize="16.0sp" />

                <CheckBox
                    android:id="@+id/cbAlarm"
                    style="@style/CheckBoxCheck"
                    android:text="@string/txt_Alarm" />

                <CheckBox
                    android:id="@+id/cbNotify"
                    style="@style/CheckBoxCheck"
                    android:text="@string/txt_Notify" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAfDays"
                style="@style/TextViewCont1DownAllow"
                android:text="@string/txt_AfDays" >
            </Button>

            <Button
                android:id="@+id/btnRemindTime"
                style="@style/TextViewCont2DownAllow"
                android:text="@string/txt_RemindTime" >
            </Button>

            <TextView
                android:id="@+id/tvRemark"
                style="@style/TextViewGroup"
                android:text="@string/txt_Remark" >
            </TextView>

            <EditText
                android:id="@+id/etRemark"
                style="@style/EditBgSmall2"
                android:hint="@string/txt_RemarkText" >
            </EditText>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>