<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@color/syssetbg"
             android:orientation="vertical">
	    	<LinearLayout
					android:id="@+id/llpwd1"
					android:layout_width="fill_parent"
					android:layout_height="50dip"
					android:paddingLeft="10dip"
					android:paddingTop="4dip"
					android:paddingRight="10dip"
					android:paddingBottom="4dp"
					android:layout_alignParentTop="true"
					android:orientation="horizontal" >
			<TextView
					android:id="@+id/tvPwd1"
					android:layout_height="fill_parent"
					android:layout_width="80dip"
					android:background="@drawable/dr_input_left"
					android:text="@string/ss_Pwd1"
					android:gravity="center_vertical|center_horizontal"
				>
				</TextView>
				<EditText
					android:id="@+id/etPwd1"
					android:layout_height="fill_parent"
					android:layout_width="220dip"
					android:padding="5dip"
					android:password="true"
					android:background="@drawable/dr_input_right"
				>
				</EditText>
		 	</LinearLayout>
		 	
	  	 	<LinearLayout
				android:id="@+id/llpwd2"
				android:layout_width="fill_parent"
				android:layout_height="50dip"
				android:paddingLeft="10dip"
				android:paddingTop="4dip"
				android:paddingRight="10dip"
				android:paddingBottom="4dp"
				android:layout_below="@+id/llpwd1"
				android:orientation="horizontal" >
			<TextView
				android:id="@+id/tvPwd2"
				android:layout_height="fill_parent"
				android:layout_width="80dip"
				android:background="@drawable/dr_input_left"
				android:text="@string/ss_Pwd2"
				android:gravity="center_vertical|center_horizontal"
			>
			</TextView>
			<EditText
				android:id="@+id/etPwd2"
				android:layout_height="fill_parent"
				android:layout_width="220dip"
				android:padding="5dip"
				android:password="true"
				android:background="@drawable/dr_input_right"
			>
		</EditText>
	</LinearLayout>

     <LinearLayout android:id="@+id/save_btn_bar"                         
	         android:orientation="horizontal"                                
	         android:gravity="bottom" 
	         android:layout_alignParentBottom="true"  
	         style="@style/BottomButtonBar"> 
	                                         
	     <Button android:id="@+id/btnCancel" 
	             android:text="@string/button_cancel" 
	             style="@style/LeftBottomButton"/> 
	                                 
	     <Button android:id="@+id/btnOK" 
	             style="@style/RightBottomButton" 
	             android:text="@string/button_ok"/> 
	 </LinearLayout>
</RelativeLayout>